# client-python

./: .ci-smoke  .gitignore  CLAUDE.md  README.md  SECURITY.md  TASKS.md  pyproject.toml
.claude/commands/: instrument.md  model.md
.claude/skills/: trulayer-python-sdk.md
.githooks/: pre-push
.github/workflows/: ci.yml  promote.yml  release-sdk.yml  release.yml
scripts/: sync_openapi.sh
src/trulayer/: __init__.py  _ids.py  batch.py  client.py  errors.py  local_batch.py  model.py  redact.py  replay.py  testing.py  trace.py
src/trulayer/instruments/: __init__.py  anthropic.py  autogen.py  crewai.py  dspy.py  haystack.py  langchain.py  llamaindex.py  openai.py  pydanticai.py
tests/: test_contract.py
tests/fixtures/: openapi.yaml
tests/unit/: test_batch.py  test_batch_threading.py  test_client.py  test_fail_mode.py  test_ids.py  test_local_mode.py  test_model.py  test_project_archived.py  test_redact.py  test_replay.py  test_tags.py  test_trace.py  test_wire_shape.py
tests/unit/instruments/: test_anthropic.py  test_autogen.py  test_crewai.py  test_dspy.py  test_haystack.py  test_langchain.py  test_llamaindex.py  test_openai.py  test_pydanticai.py
