[project]
name = "trulayer"
version = "0.1.4"
description = "TruLayer AI — trace capture SDK for Python"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.36.0"]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
pydantic-ai = ["pydantic-ai>=0.0.14"]
crewai = ["crewai>=0.30.0"]
dspy = ["dspy-ai>=2.4.0"]
haystack = ["haystack-ai>=2.0.0"]
autogen = ["pyautogen>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trulayer"]

[tool.hatch.build.targets.wheel.force-include]
".claude/skills" = "trulayer/.claude/skills"

[tool.hatch.build.targets.sdist]
include = [
    "src/trulayer",
    ".claude/skills",
    "README.md",
    "pyproject.toml",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "openapi-spec-validator>=0.7.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/trulayer --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src"]

[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "langchain.*", "langchain_core.*", "llama_index.*", "pydantic_ai.*", "crewai.*", "dspy.*", "haystack.*", "autogen.*", "pyautogen.*"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 90
